--- a/lib/libcithare/dune
+++ b/lib/libcithare/dune
@@ -17,5 +17,4 @@
 
 (library
  (name libcithare)
- (libraries yojson cryptokit xdg dune-build-info)
-)
+ (libraries yojson cryptokit xdg dune-build-info))
