--- a/lib/cbindings/macos/dune
+++ b/lib/cbindings/macos/dune
@@ -15,26 +15,32 @@
 ;*                                                                                            *;
 ;**********************************************************************************************;
 
+(include_subdirs no)
+
 (data_only_dirs build)
 
 (rule
- (enabled_if (= %{system} macosx))
- (deps (source_tree build))
+ (enabled_if
+  (= %{system} macosx))
+ (deps
+  (source_tree build))
  ; (targets libmacos.a libmacos.dylib libmacos.o)
  (targets libmacos.o)
  (action
- (no-infer
-  (progn
-   (chdir build (run make))
-   ; (copy build/libmacos.a libmacos.a)
-   ; (copy build/libmacos.dylib libmacos.dylib)
-   (copy build/caml_macos.o libmacos.o)
-   )))
- )
+  (no-infer
+   (progn
+    (chdir
+     build
+     (run make))
+    ; (copy build/libmacos.a libmacos.a)
+    ; (copy build/libmacos.dylib libmacos.dylib)
+    (copy build/caml_macos.o libmacos.o)))))
 
 (library
  (name macos)
  (extra_objects libmacos)
- (c_library_flags (-framework Foundation) (-framework AppKit))
- (enabled_if (= %{system} macosx))
-)
+ (c_library_flags
+  (-framework Foundation)
+  (-framework AppKit))
+ (enabled_if
+  (= %{system} macosx)))
