--- a/lib/commandline/dune
+++ b/lib/commandline/dune
@@ -17,9 +17,4 @@
 
 (library
  (name commandline)
- (libraries 
-   cmdliner 
-   libcithare
-   cshow
- )
-)
+ (libraries cmdliner libcithare cshow))
