--- a/lib/util/dune
+++ b/lib/util/dune
@@ -14,3 +14,7 @@
 ;* If not, see <http://www.gnu.org/licenses/>.                                                *;
 ;*                                                                                            *;
 ;**********************************************************************************************;
+
+(library
+ (name util)
+ (libraries))
