--- a/lib/libcithare/dune
+++ b/lib/libcithare/dune
@@ -17,6 +17,6 @@
 
 (library
  (name libcithare)
- (libraries util cbindings yojson cryptokit xdg dune-build-info)
+ (libraries util cbindings str yojson cryptokit xdg dune-build-info)
  (preprocess
   (pps ppx_deriving_yojson)))
